# Sable

./: .cursorrules  .gitattributes  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPILOT.md  Caddyfile  Dockerfile  README.md  TRADEMARKS.md  build.sh  config.json  crowdin.yml  eslint.config.js  fix_sort.py  flake.nix  index.html  knip.json  knope.toml  lint_output.txt  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sable.code-workspace  tsconfig.build.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts  (+1 more)
.changeset/: aadd_theme_catalog_remote_and_migration.md  add-ability-to-customize-pronoun-limits.md  add-add-server-persistence.md  add-back-msg-toolbar.md  add-context-aware-search.md  add-detailed-login-info.md  add-forum-room-type.md  add-forward-errors.md  add-hidden-events-timeline.md  add-hover-pronouns-list.md  add-icon-size-settings.md  add-leave-children.md  add-matrix-uri-support.md  add-misskey-flavored-markdown.md  add-new-logo.md  add-playwright-smoke-and-sentry-ops-note.md  add-reaction-list-shortcut.md  add-room-banner-support.md  add_ability_to_click_on_usernames_in_member_and_state_events_to_view_user_info.md  add_basic_hiding_rooms.md  add_better_misc_data_styling.md  add_black_theme.md  add_catppuccin_theme.md  add_color_heros.md  add_dismiss_invites.md  add_graceful_fail_if_msc4140_event_delay_exceeded.md  add_hide_preview.md  add_hide_urlPreview.md  add_highlithing_to_to_be_replied.md  add_icons_to_room_sidebar.md  add_knocking_support_when_attempting_to_join_a_room_from_the_directory_an_address_a_room_mention_or_space_hierarchy.md  add_limited_pk_command_support.md  add_location.md  add_location_command.md  add_maskable_icons_for_pwas.md  add_math_and_markdown.md  add_msc4095_displaying.md  add_multiple_previews.md  add_pmp_shorthands.md  add_polls.md  (+425 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  on-create.sh  onCreate.sh  post-create.sh  post-start.sh  postCreate.sh  setup-signing.sh  update-content.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/instructions/: security.instructions.md  typescript.instructions.md
.github/prompts/: architecture-review.prompt.md  implement-plan.prompt.md  investigate-bug.prompt.md  normalize-integration.prompt.md  rebuild integration.prompt.md  rebuild-integration.prompt.md  review open PRs against `upstream`.prompt.md  review-prs-against-upstream.md
.github/scripts/: enrich-changelog.mjs
.github/workflows/: cloudflare-dev-deploy.yml  cloudflare-web-deploy.yml  cloudflare-web-preview.yml  codeql.yml  dependency-diff-analyze.yml  dependency-diff-comment.yml  docker-publish.yml  flake-lock-fix.yml  live-matrix-smoke.yml  playwright-smoke.yml  prepare-release.yml  quality-checks.yml  release.yml  require-changeset.yml  sentry-native-prep.yml  sentry-preview-issues.yml  sentry-snapshots.yml  upstream-sync-pr.yml
crates/sable-macros/: Cargo.toml
crates/tauri-plugin-splashscreen/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  rollup.config.js
crates/tauri-plugin-splashscreen/android/: .gitignore  build.gradle.kts
crates/tauri-plugin-splashscreen/android/src/androidTest/java/: ExampleInstrumentedTest.kt
crates/tauri-plugin-splashscreen/android/src/main/java/moe/sable/app/plugin/splashscreen/: SplashScreenPlugin.kt
crates/tauri-plugin-splashscreen/android/src/main/res/values/: themes.xml
crates/tauri-plugin-splashscreen/dist-js/: index.cjs  index.d.ts  index.js
crates/tauri-plugin-splashscreen/guest-js/: index.ts
crates/tauri-plugin-splashscreen/permissions/: default.toml
crates/tauri-plugin-splashscreen/permissions/autogenerated/: reference.md
crates/tauri-plugin-splashscreen/permissions/schemas/: schema.json
crates/tauri-plugin-splashscreen/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
design/: sable.af
docs/: BRANDING.md  CODE_QUALITY.md  LOGGING_STANDARDS.md  MANUAL_QA_ISSUES_103_109_111.md  MANUAL_QA_PWA_PUSH_RESUME_MATRIX.md  MOBILE_FIXES.md  NOTIFICATIONS_FIXES.md  PRIVACY.md  SENTRY_INTEGRATION.md  SENTRY_ISSUES_ANALYSIS.md  SENTRY_PRIVACY.md  STABILITY_REVIEW.md  TESTING.md  TIMELINE_FIXES.md  UI_PARITY_AUDIT.md  sygnal-setup.md
e2e/live/: liveMatrix.spec.ts
e2e/smoke/: emoji-polish.spec.ts  menu-polish.spec.ts  mobile-shell.spec.ts  observability.spec.ts  room-spacing.spec.ts  search-shortcuts.spec.ts  smokeApp.ts  startup.spec.ts
infra/: README.md  terraform.tfvars.example
public/: _headers  manifest.json
scripts/: generateDTSFromJSONSchema.js  import-rewrites.test.js  inject-client-config.js  install-git-hooks.sh  install-knope.js  migrate-matrix-sdk-imports.js  normalize-imports.js  symlink-tauri-icons.js  tauri.js
semgrep/: charm-stability.yml
src/: colors.css.ts  ext.d.ts  index.css  index.tsx  instrument.ts  launch-context-persistence.test.ts  launch-context-persistence.ts  main.tsx  serviceWorkerBootstrap.test.ts  serviceWorkerBootstrap.ts  sw-notification-click.test.ts  sw-notification-click.ts  sw-session-persistence.test.ts  sw-session-persistence.ts  sw-session-state.test.ts  sw-session-state.ts  sw-session.ts  sw.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/drawable/: ic_notification.xml  notification_icon.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: desktop_tray.rs  lib.rs  main.rs
src-tauri/src/desktop/: mod.rs  runtime_state.rs  settings.rs  tray.rs
src-tauri/src/desktop/windows/: mod.rs  window_tracking.rs
src-tauri/src/network/: loopback_http.rs  mod.rs
src-tauri/src/windows/: mod.rs  snap_overlay.rs  snap_overlay_stub.rs  window_tracking.rs  window_tracking_stub.rs
worker/: index.ts
(+1280 files in other folders)
